fix: fixed gap on footer section

--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -13,6 +13,7 @@ h3{
   width: 100%;
   display: flex;
   justify-content: center;
+  gap: 10px;
 }
 @media (min-width: 769px) {
   .footer{
